# ai_is_calling

./: Makefile  README.md  pyproject.toml
data/input/: function_calling_tests copy 2.json
data/output/: results.json
src/: __main__.py  decoder.py  loader.py  models.py  pipeline.py  writer.py
